# son-fertilizer

./: eslint.config.ts  index.html  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  schema.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2025-11-08-084648-0000_initialize_tables/: down.sql  up.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: category_commands.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: categories.rs  mod.rs
src-tauri/src/services/: category_services.rs  mod.rs  pagination_services.rs
src/components/animate-ui/components/animate/: tooltip.tsx
src/components/animate-ui/components/buttons/: button.tsx
src/components/animate-ui/components/radix/: dropdown-menu.tsx  sheet.tsx  sidebar.tsx
src/components/animate-ui/primitives/animate/: slot.tsx  tooltip.tsx
src/components/animate-ui/primitives/buttons/: button.tsx
src/components/animate-ui/primitives/effects/: highlight.tsx
src/components/categories/: form.tsx  table.tsx
src/components/common/: loading.tsx  pagination.tsx  table.tsx  tooltip-icon-button.tsx
src/components/ui/: avatar.tsx  breadcrumb.tsx  button.tsx  input.tsx  pagination.tsx  separator.tsx  table.tsx
src/constants/: menu.tsx
src/hooks/: use-data-state.tsx
src/layouts/header/: index.tsx
src/layouts/inset/: index.tsx
src/layouts/sidebar/: index.tsx
src/lib/: date.ts  index.ts
src/pages/: home-page.tsx
src/pages/masters/: categories.tsx  orders.tsx
src/stores/: categories.ts
(+4 files in other folders)
