[package]
name = "son-fertilizer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "son_fertilizer"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.3.0"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "full"] }
dirs = "5.0"

